# gtk-poly

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/gtkpoly/: application.hxx  window.hxx
src/: application.cxx  dimens.hxx  portable_layer.cxx  portable_layer.hxx  random.hxx
src/messages/: create_window.np.cxx  create_window.np.hxx  invoke_callback.np.cxx  invoke_callback.np.hxx  nanopack_message_factory.np.cxx  nanopack_message_factory.np.hxx  ok_response.np.cxx  ok_response.np.hxx  reply_from_callback.np.cxx  reply_from_callback.np.hxx  request.np.cxx  request.np.hxx
src/messages/widgets/: alignment.np.hxx  center.np.cxx  center.np.hxx  column.np.cxx  column.np.hxx  create_widget.np.cxx  create_widget.np.hxx  font_style.np.cxx  font_style.np.hxx  make_widget.np.cxx  make_widget.np.hxx  row.np.cxx  row.np.hxx  text.np.cxx  text.np.hxx  update_widget.np.cxx  update_widget.np.hxx  update_widgets.np.cxx  update_widgets.np.hxx  widget.np.cxx  widget.np.hxx
src/messages/widgets/button/: button.np.cxx  button.np.hxx  click_event.np.cxx  click_event.np.hxx
src/messages/widgets/list_view/: list_view.np.cxx  list_view.np.hxx  list_view_batch_operations.np.cxx  list_view_batch_operations.np.hxx  list_view_delete_operation.np.cxx  list_view_delete_operation.np.hxx  list_view_insert_operation.np.cxx  list_view_insert_operation.np.hxx  list_view_item.np.cxx  list_view_item.np.hxx  list_view_item_config.np.cxx  list_view_item_config.np.hxx  list_view_item_config.yml  list_view_operation.np.cxx  list_view_operation.np.hxx  make_list_view_operation.np.cxx  make_list_view_operation.np.hxx  render_item_config.np.cxx  render_item_config.np.hxx
src/messages/widgets/text_field/: on_value_changed.np.cxx  on_value_changed.np.hxx  text_field.np.cxx  text_field.np.hxx
src/widget/: button.cxx  button.hxx  center.cxx  center.hxx  column.cxx  column.hxx  list_view.cxx  list_view.hxx  row.cxx  row.hxx  spacer.cxx  spacer.hxx  text.cxx  text.hxx  text_field.cxx  text_field.hxx  widget_factory.cxx  widget_factory.hxx  widget_registry.cxx  widget_registry.hxx  widget_updater.cxx  widget_updater.hxx
src/window/: window.cxx  window_manager.cxx
